// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > column layout > uses fixed widths for specified columns 1`] = `
" Name       │ Age
────────────────────
▶Alice      │ 30   ◀
 [ ↓ 4 more rows ]"
`;

exports[`Table > header rendering > renders header, separator, and data rows 1`] = `
" Name     │   Age │ City
──────────────────────────────
▶Alice    │    30 │ New York ◀
 Bob      │    25 │ Chicago
 Charlie  │    35 │ Austin
 Diana    │    28 │ Seattle
 Eve      │    42 │ Denver"
`;

exports[`Table > header rendering > shows ascending sort indicator after column title 1`] = `
" Name ▲   │   Age │ City
──────────────────────────────
▶Alice    │    30 │ New York ◀
 Bob  [ ↓ 4 more rows ] ago"
`;

exports[`Table > header rendering > shows descending sort indicator 1`] = `
" Name     │   Age │ City ▼
──────────────────────────────
▶Diana    │    28 │ Seattle  ◀
 Alic [ ↓ 4 more rows ] York"
`;

exports[`Table > row numbers > does not show row numbers when disabled 1`] = `
" Name     │   Age │ City
──────────────────────────────
▶Alice    │    30 │ New York ◀
 Bob  [ ↓ 4 more rows ] ago"
`;

exports[`Table > row numbers > renders row number column with # header 1`] = `
" # │ Name ▲   │   Age │ City
───────────────────────────────────
▶1 │ Alice    │    30 │ New York  ◀
 2 │ Bob      │    25 │ Chicago
 3 │ Charlie  │    35 │ Austin
 4 │ Diana    │    28 │ Seattle
 5 │ Eve      │    42 │ Denver"
`;

exports[`Table > row numbers > shows sort arrow on # when sorting by original order 1`] = `
" ▲ │ Name     │   Age │ City
───────────────────────────────────
▶1 │ Alice    │    30 │ New York  ◀
 2 │ Bob [ ↓ 4 more rows ] cago"
`;

exports[`Table > row numbers > widens row number column for 2-digit counts 1`] = `
"  # │ Name ▲   │   Age │ City
───────────────────────────────────
▶ 1 │ Row0     │     0 │ City0    ◀
  2 │ Row1     │     1 │ City1
  3 │ Row2     │     2 │ City2
  4 │ Row3     │     3 │ City3
  5 │ Row4     │     4 │ City4
  6 │ Row5     │     5 │ City5
  7 │ Row6     │     6 │ City6
  8 │ Row7     │     7 │ City7
  9 │ Row8     │     8 │ City8
 10 │ Row9     │     9 │ City9
 11 │ Row10    │    10 │ City10
 12 │ Row11    │    11 │ City11"
`;

exports[`Table > row numbers > widens row number column for 3-digit counts 1`] = `
"   # │ Name ▲   │   Age │ City
────────────────────────────────────────
 147 │ R1 [ ↑ 147 more rows ]
 148 │ R147     │   147 │ C147
 149 │ R148     │   148 │ C148
▶150 │ R149     │   149 │ C149         ◀"
`;

exports[`Table > scroll indicators > both indicators overlaid on dimmed rows 1`] = `
" Name     │   Age │ City
──────────────────────────────
 Bob  [ ↑ 2 more rows ] ago
▶Charlie  │    35 │ Austin   ◀
 Dian [ ↓ 2 more rows ] tle"
`;

exports[`Table > scroll indicators > no indicators when all rows fit 1`] = `
" Name     │   Age │ City
──────────────────────────────
▶Alice    │    30 │ New York ◀
 Bob      │    25 │ Chicago
 Charlie  │    35 │ Austin
 Diana    │    28 │ Seattle
 Eve      │    42 │ Denver"
`;

exports[`Table > scroll indicators > no ↑ when scrollOffset is 0 1`] = `
" Name     │   Age │ City
──────────────────────────────
 Alice    │    30 │ New York
▶Bob      │    25 │ Chicago  ◀
 Char [ ↓ 3 more rows ] in"
`;

exports[`Table > scroll indicators > ↓ indicator overlaid on dimmed last row 1`] = `
" Name     │   Age │ City
──────────────────────────────
▶Alice    │    30 │ New York ◀
 Bob      │    25 │ Chicago
 Char [ ↓ 3 more rows ] in"
`;

exports[`Table > selection (multi-select) > renders checkbox column with showSelected 1`] = `
" [ ] │ Name     │   Age │ City
───────────────────────────────────
▶[ ] │ Alice    │    30 │ New York◀
 [ ] │ Bob      │    25 │ Chicago
 [ ] │ Charlie  │    35 │ Austin
 [ ] │ Diana    │    28 │ Seattle
 [ ] │ Eve      │    42 │ Denver"
`;

exports[`Table > selection > shows ▶ on selected row 1`] = `
" Name     │   Age │ City
──────────────────────────────
 Alice    │    30 │ New York
 Bob      │    25 │ Chicago
▶Charlie  │    35 │ Austin   ◀
 Diana    │    28 │ Seattle
 Eve      │    42 │ Denver"
`;
